crates/tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__BitwiseNegation.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "BitwiseNegation",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "BitwiseNegation",
      position: 2,
      line: 1,
      column: 3,
    ),
  ),
  data: UnaryOperation(UnaryOperation(
    operator: Spanned(
      span: Span(
        start: Location(
          file_name: "BitwiseNegation",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "BitwiseNegation",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      data: BitwiseNegation,
    ),
    operand: Spanned(
      span: Span(
        start: Location(
          file_name: "BitwiseNegation",
          position: 1,
          line: 1,
          column: 2,
        ),
        end: Location(
          file_name: "BitwiseNegation",
          position: 2,
          line: 1,
          column: 3,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "BitwiseNegation",
              position: 1,
              line: 1,
              column: 2,
            ),
            end: Location(
              file_name: "BitwiseNegation",
              position: 2,
              line: 1,
              column: 3,
            ),
          ),
          data: "1",
        ),
        radix: 10,
      ))),
    ),
  )),
))
